Kubernetes/ingress-controller/haproxy-ingress/demo-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
  annotations:
    kubernetes.io/ingress.class: "haproxy"
spec:
  rules:
  - host: demo.haproxy.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: demo
            port:
              number: 5678
